--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,14 @@ services:
     volumes:
       - ./app:/app
     command: >
-     sh -c "python manage.py migrate &&
+     sh -c "python manage.py wait_for_db &&
+            python manage.py migrate &&
             python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
       - DB_NAME=app
       - DB_USER=postgres
-      - DB_PASS=supersecretpassword     
+      - DB_PASS=supersecretpassword
 
   db:
     image: postgresql:10-alpine
